--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ body {
     padding: 30px;
     color: whitesmoke;
     text-align: center;
-    font-size: large;
+    font-size: 12px;
     bottom: 0;
     width: 100%;
     position: fixed;
